--- a/src/pages/Options/index.html
+++ b/src/pages/Options/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
+<html lang="ko">
+<head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Settings</title>
-  </head>
+    <title>Options</title>
+</head>
 
-  <body>
-    <div id="app-container"></div>
-  </body>
+<body>
+<div id="app-container"></div>
+<script type="module" src="./index.tsx"></script>
+</body>
 </html>
